docs: Add jDeploy distribution documentation (development.md)